mobile fixado sem scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Tengu</title>
     </head>
 
-    <body>
+    <body class="fixed">
         <nav>
             <div class="logo">
                 <a href="#">
