com o ultimo build

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <link rel="stylesheet" href="./css/linksUnderline.css">
         <link rel="stylesheet" href="./css/dropdownStyle.css">
         <link rel="stylesheet" href="./css/navStyle.css">
-        <title>Tengu</title>
+        <title>TenguKaze</title>
+        <link rel="TenguKaze icon" href="./icon/Tengu.svg" >
+
     </head>
 
     <body class="fixed">
@@ -37,13 +39,13 @@
                     <div class="box dropdown">
                         <a class="custom-underline">social media</a>
                         <div class="dropdown-content">
-                            <a class="dropdown-link" href="#1">
+                            <a class="dropdown-link" href="#">
                                 <img class="dropdown-img" src="./icon/facebook.png" href="#">
                             </a>
                             <a class="dropdown-link" href="https://www.instagram.com/tengukazestudio/">
                                 <img class="dropdown-img" src="./icon/instagram.png" href="#">
                             </a>
-                            <a class="dropdown-link" href="#3">
+                            <a class="dropdown-link" href="#">
                                 <img class="dropdown-img" src="./icon/twitter.png" href="#">
                             </a>
                         </div>
@@ -79,7 +81,7 @@
                         <div class="work-text-content ">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             <div class="download-btn">
-                                <a href="./game/host714-demo (1).rar" download>
+                                <a href="./game/Host 714 Demo.zip" download>
                                     <button type="button" class="btn btn-secondary">Download</button>
                                 </a>    
                             </div>
