textos e links das redes sociais

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                     <div class="box dropdown">
                         <a class="custom-underline">social media</a>
                         <div class="dropdown-content">
-                            <a class="dropdown-link" href="#">
+                            <a class="dropdown-link" href="https://www.facebook.com/tengukazestudio">
                                 <img class="dropdown-img" src="./icon/facebook.png" href="#">
                             </a>
                             <a class="dropdown-link" href="https://www.instagram.com/tengukazestudio/">
                                 <img class="dropdown-img" src="./icon/instagram.png" href="#">
                             </a>
-                            <a class="dropdown-link" href="#">
+                            <a class="dropdown-link" href="twitter.com/studiotengukaze">
                                 <img class="dropdown-img" src="./icon/twitter.png" href="#">
                             </a>
                         </div>
@@ -79,7 +79,17 @@
                     <img class="d-block w-100" src="./img/host.png" data-color="lightblue" alt="First Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            <h2>
+                                Host 714
+                            </h2>
+                            <p>
+                                A drug user receives an offer that he cannot refuse
+                                that promises to change your life in a rehabilitation center
+                                on an island far from society.
+                                Arriving on the island, he realizes that it may not be what he expected.
+                                Help our protagonist to escape from the Orange Institute
+                                in this challenging stealth game.
+                            </p>
                             <div class="download-btn">
                                 <a href="./game/Host_714_demo.zip" download>
                                     <button type="button" class="btn btn-secondary">Download</button>
@@ -93,7 +103,16 @@
                     <img class="d-block w-100" src="./img/greenmemories.png" data-color="lightblue" alt="Second Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            <h2>
+                                Green Memories
+                            </h2>
+                            <p>
+                                The year is 2XXX, a meteorologist sets up camp
+                                in a completely desolate land to collect
+                                data from research that could change the future of
+                                planet. Help our protagonist in her research
+                                in this GBC-style Survival Action-RPG.
+                            </p>
                         </div> 
                     </div>  
                 </div>
@@ -101,7 +120,21 @@
                     <img class="d-block w-100" src="./img/taberu.png" data-color="lightblue" alt="Third Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            <h2>
+                                Taberu Bakemono
+                            </h2>
+                            <p>
+                                Taberu is a monster that, from era to era, 
+                                leaves the center of the world and, for a day, feeds on the surface 
+                                until the sun goes down. Unfortunately 
+                                your village was in the monster’s path.
+                                Upon noticing the creature’s huge mouth approaching
+                                some villagers ran away immediately. 
+                                You, the king of this tribe, waited for each resident 
+                                to escape safely to get away from the threat together. 
+                                Find the others and keep them alive. Look for an escape route 
+                                until Taberu is satisfied and goes back to your millennial sleep.
+                            </p>
                         </div> 
                     </div>
                 </div>
