--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <a class="dropdown-link" href="https://www.instagram.com/tengukazestudio/">
                                 <img class="dropdown-img" src="./icon/instagram.png" href="#">
                             </a>
-                            <a class="dropdown-link" href="twitter.com/studiotengukaze">
+                            <a class="dropdown-link" href="https://www.twitter.com/studiotengukaze">
                                 <img class="dropdown-img" src="./icon/twitter.png" href="#">
                             </a>
                         </div>
