--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </h2>
                             <p>
                                 A drug user receives an offer that he cannot refuse
-                                that promises to change your life in a rehabilitation center
+                                that promises to change his life in a rehabilitation center
                                 on an island far from society.
                                 Arriving on the island, he realizes that it may not be what he expected.
                                 Help our protagonist to escape from the Orange Institute
