--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 in this challenging stealth game.
                             </p>
                             <div class="download-btn">
-                                <a href="./game/Host_714_demo.zip" download>
+                                <a href="./game/host714_demo.zip" download>
                                     <button type="button" class="btn btn-secondary">Download</button>
                                 </a>    
                             </div>
