Esqueci do jogo

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                 in this challenging stealth game.  
                             </p>
                             <div class="download-btn">
-                                <a >
-                                    <button type="button" class="btn btn-secondary"><i class="fab fa-windows"></i> Download  <span class="badge"> 4 </span></button>
+                                <a href="./game/host714_demo.zip" download>
+                                    <button type="button" class="btn btn-secondary"><i class="fab fa-windows"></i> Download</button>
                                 </a>    
                             </div>
                         </div> 
