Ajuste do title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./css/linksUnderline.css">
         <link rel="stylesheet" href="./css/dropdownStyle.css">
         <link rel="stylesheet" href="./css/navStyle.css">
-        <title>TenguKaze</title>
+        <title>Tengukaze</title>
         <link rel="TenguKaze icon" href="./icon/Tengu.svg" >
 
     </head>
