links para steam

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
                 <li>
                     <div class="box">
-                        <a href="#" class="custom-underline">steam</a>
+                        <a href="https://store.steampowered.com/app/1579680/Host_714/" class="custom-underline">steam</a>
                     </div>
                 </li>
                 <li>
@@ -92,8 +92,8 @@
                                 in this challenging stealth game.  
                             </p>
                             <div class="download-btn">
-                                <a href="./game/host714_demo.zip" download>
-                                    <button type="button" class="btn btn-secondary"><i class="fab fa-windows"></i> Download</button>
+                                <a href="https://store.steampowered.com/app/1579680/Host_714/" >
+                                    <button type="button" class="btn btn-secondary"><i class="fab fa-windows"></i> Play</button>
                                 </a>    
                             </div>
                         </div> 
