update dos jogos, imagens e links

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                     <img class="d-block w-100" src="./img/host.png" data-color="lightblue" alt="First Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <h2>
+                            <h2 class="strokeme">
                                 Host 714
                             </h2>
-                            <p>
+                            <p class="strokeme">
                                 A drug user receives an offer that he cannot refuse
                                 that promises to change his life in a rehabilitation center
                                 on an island far from society.
@@ -93,8 +93,14 @@
                             </p>
                             <div class="download-btn">
                                 <a href="https://store.steampowered.com/app/1579680/Host_714/" >
-                                    <button type="button" class="btn btn-secondary"><i class="fab fa-windows"></i> Play</button>
-                                </a>    
+                                    <button type="button" class="btn btn-secondary btn-square-md"><i class="fab fa-steam"></i> Steam</button>
+                                </a>
+                                <a href="https://store.playstation.com/pt-br/concept/10005227">
+                                    <button type="button" class="btn btn-secondary btn-square-md"><i class="fab fa-playstation"></i> PS4 / PS5</button>
+                                </a>
+                                <a href="https://www.nintendo.com/pt-br/store/products/host-714-switch/">
+                                    <button type="button" class="btn btn-secondary btn-square-md"><i class="fab fa-game-console-handheld"></i>Nintendo Switch</button>
+                                </a>
                             </div>
                         </div> 
                     </div>
@@ -104,16 +110,19 @@
                     <img class="d-block w-100" src="./img/greenmemories.png" data-color="lightblue" alt="Second Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <h2>
+                            <h2 class="strokeme">
                                 Green Memories
                             </h2>
-                            <p>
-                                The year is 2XXX, a meteorologist sets up camp
-                                in a completely desolate land to collect
-                                data from research that could change the future of
-                                planet. Help our protagonist in her research
-                                in this GBC-style Survival Action-RPG.
+                            <p class="strokeme">
+                                The year is 300 a.f. and protagonist Cytra tries to survive the extreme climate of a post-apocalyptic desert while
+                            collecting data from her scientific research.<br>                            
+                                Green Memories is a Survival RPG game for Gameboy Advance and also the Winner of the GBA JAM 2022.
                             </p>
+                            <div class="download-btn">
+                                <a href="https://tengukaze.itch.io/green-memories-gba">
+                                    <button type="button" class="btn btn-secondary btn-square-md"><i class="fab fa-itch-io"></i> itch.io</button>
+                                </a>                                
+                            </div>
                         </div> 
                     </div>  
                 </div>
@@ -121,21 +130,19 @@
                     <img class="d-block w-100" src="./img/taberu.png" data-color="lightblue" alt="Third Image">
                     <div class="black-curtain">
                         <div class="work-text-content ">
-                            <h2>
-                                Taberu Bakemono
+                            <h2 class="strokeme">
+                                Pixies 'n Crafts
                             </h2>
-                            <p>
-                                Taberu is a monster that, from era to era, 
-                                leaves the center of the world and, for a day, feeds on the surface 
-                                until the sun goes down. Unfortunately 
-                                your village was in the monster’s path.
-                                Upon noticing the creature’s huge mouth approaching
-                                some villagers ran away immediately. 
-                                You, the king of this tribe, waited for each resident 
-                                to escape safely to get away from the threat together. 
-                                Find the others and keep them alive. Look for an escape route 
-                                until Taberu is satisfied and goes back to your millennial sleep.
+                            <p class="strokeme">
+                                Pixies 'n Crafts is a 2D platform game with crafting elements. In it you take on the role of the King, who deploys his
+                                energy in the form of adorable creatures to help you escape a terrible monster. Deep in an unknown universe, there was
+                                this monster, which devoured all the matter that was in front of it.
                             </p>
+                            <div class="download-btn">
+                                <a href="https://store.steampowered.com/app/1965760/Pixies_n_Crafts">
+                                    <button type="button" class="btn btn-secondary btn-square-md"><i class="fab fa-steam"></i> Steam</button>
+                                </a>
+                            </div>
                         </div> 
                     </div>
                 </div>
